// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic No Default Answers getConfigs 1`] = `
Array [
  Object {
    "custom": undefined,
    "defaultDisabled": false,
    "groups": Array [
      Object {
        "custom": undefined,
        "defaultDisabled": false,
        "groups": Array [],
        "id": "subGroup1",
        "questions": Array [
          Object {
            "choices": Array [],
            "custom": Object {
              "title": "subGroup1Questions",
            },
            "defaultAnswer": undefined,
            "defaultDisabled": false,
            "id": "subGroup1Question1",
            "type": "any",
            "validators": Array [
              "notNull",
            ],
          },
          Object {
            "choices": Array [
              Object {
                "custom": Object {
                  "title": "subGroup1Question2Choice1",
                },
                "defaultDisabled": false,
                "id": "subGroup1Question2Choice1",
                "onSelected": Object {
                  "enable": Array [
                    "subGroup1Question3",
                  ],
                },
                "value": "subGroup1Question2Choice1",
              },
              Object {
                "custom": Object {
                  "title": "subGroup1Question2Choice2",
                },
                "defaultDisabled": false,
                "id": "subGroup1Question2Choice2",
                "onSelected": Object {
                  "disable": Array [
                    "subGroup1Question4",
                  ],
                },
                "value": "subGroup1Question2Choice2",
              },
              Object {
                "custom": Object {
                  "title": "subGroup1Question2Choice3",
                },
                "defaultDisabled": false,
                "id": "subGroup1Question2Choice3",
                "onSelected": Object {},
                "value": "subGroup1Question2Choice3",
              },
            ],
            "custom": Object {
              "title": "subGroup1Question2",
            },
            "defaultAnswer": undefined,
            "defaultDisabled": false,
            "id": "subGroup1Question2",
            "type": "choice",
            "validators": Array [
              "notNullSingle",
            ],
          },
          Object {
            "choices": Array [
              Object {
                "custom": Object {
                  "title": "subGroup1Question3Choice1",
                },
                "defaultDisabled": false,
                "id": "subGroup1Question3Choice1",
                "onSelected": Object {},
                "value": "subGroup1Question3Choice1",
              },
              Object {
                "custom": Object {
                  "title": "subGroup1Question3Choice2",
                },
                "defaultDisabled": false,
                "id": "subGroup1Question3Choice2",
                "onSelected": Object {},
                "value": "subGroup1Question3Choice2",
              },
              Object {
                "custom": Object {
                  "title": "subGroup1Question3Choice3",
                },
                "defaultDisabled": false,
                "id": "subGroup1Question3Choice3",
                "onSelected": Object {},
                "value": "subGroup1Question3Choice3",
              },
            ],
            "custom": Object {
              "title": "subGroup1Question3",
            },
            "defaultAnswer": undefined,
            "defaultDisabled": true,
            "id": "subGroup1Question3",
            "type": "choices",
            "validators": Array [
              "atLeast1",
            ],
          },
          Object {
            "choices": Array [
              Object {
                "custom": Object {
                  "title": "subGroup1Question4Choice1",
                },
                "defaultDisabled": false,
                "id": "subGroup1Question4Choice1",
                "onSelected": Object {},
                "value": "subGroup1Question4Choice1",
              },
              Object {
                "custom": Object {
                  "title": "subGroup1Question4Choice2",
                },
                "defaultDisabled": false,
                "id": "subGroup1Question4Choice2",
                "onSelected": Object {},
                "value": "subGroup1Question4Choice2",
              },
              Object {
                "custom": Object {
                  "title": "subGroup1Question4Choice3",
                },
                "defaultDisabled": false,
                "id": "subGroup1Question4Choice3",
                "onSelected": Object {},
                "value": "subGroup1Question4Choice3",
              },
            ],
            "custom": Object {
              "title": "subGroup1Question3",
            },
            "defaultAnswer": undefined,
            "defaultDisabled": false,
            "id": "subGroup1Question4",
            "type": "choices",
            "validators": Array [
              "atLeast1",
            ],
          },
        ],
      },
    ],
    "id": "group1",
    "questions": Array [
      Object {
        "choices": Array [],
        "custom": Object {
          "title": "group1Questions",
        },
        "defaultAnswer": undefined,
        "defaultDisabled": false,
        "id": "group1Question1",
        "type": "any",
        "validators": Array [
          "notNull",
        ],
      },
      Object {
        "choices": Array [
          Object {
            "custom": Object {
              "title": "group1Question2Choice1",
            },
            "defaultDisabled": false,
            "id": "group1Question2Choice1",
            "onSelected": Object {},
            "value": "group1Question2Choice1",
          },
          Object {
            "custom": Object {
              "title": "group1Question2Choice2",
            },
            "defaultDisabled": false,
            "id": "group1Question2Choice2",
            "onSelected": Object {},
            "value": "group1Question2Choice2",
          },
          Object {
            "custom": Object {
              "title": "group1Question2Choice3",
            },
            "defaultDisabled": false,
            "id": "group1Question2Choice3",
            "onSelected": Object {},
            "value": "group1Question2Choice3",
          },
        ],
        "custom": Object {
          "title": "group1Question2",
        },
        "defaultAnswer": undefined,
        "defaultDisabled": false,
        "id": "group1Question2",
        "type": "choice",
        "validators": Array [
          "notNullSingle",
        ],
      },
      Object {
        "choices": Array [
          Object {
            "custom": Object {
              "title": "group1Question3Choice1",
            },
            "defaultDisabled": false,
            "id": "group1Question3Choice1",
            "onSelected": Object {},
            "value": "group1Question3Choice1",
          },
          Object {
            "custom": Object {
              "title": "group1Question3Choice2",
            },
            "defaultDisabled": false,
            "id": "group1Question3Choice2",
            "onSelected": Object {},
            "value": "group1Question3Choice2",
          },
          Object {
            "custom": Object {
              "title": "group1Question3Choice3",
            },
            "defaultDisabled": false,
            "id": "group1Question3Choice3",
            "onSelected": Object {},
            "value": "group1Question3Choice3",
          },
        ],
        "custom": Object {
          "title": "group1Question3",
        },
        "defaultAnswer": undefined,
        "defaultDisabled": false,
        "id": "group1Question3",
        "type": "choices",
        "validators": Array [],
      },
    ],
  },
]
`;

exports[`Basic No Default Answers getCurrentAnswers 1`] = `
Object {
  "group1Question3": Array [],
  "subGroup1Question3": Array [],
  "subGroup1Question4": Array [],
}
`;

exports[`Basic No Default Answers getErrors 1`] = `
Object {
  "group1Question1": "This field is required.",
  "group1Question2": "Please select an option.",
  "subGroup1Question1": "This field is required.",
  "subGroup1Question2": "Please select an option.",
  "subGroup1Question4": "Please select at least 1 option.",
}
`;

exports[`Basic No Default Answers getRenderInstructions 1`] = `
Array [
  Object {
    "custom": undefined,
    "disabled": false,
    "groups": Array [
      Object {
        "custom": undefined,
        "disabled": false,
        "groups": Array [],
        "id": "subGroup1",
        "questions": Array [
          Object {
            "choices": Array [],
            "currentAnswer": undefined,
            "custom": Object {
              "title": "subGroup1Questions",
            },
            "disabled": false,
            "error": "This field is required.",
            "id": "subGroup1Question1",
            "type": "any",
            "validatedAnswer": undefined,
            "validating": false,
          },
          Object {
            "choices": Array [
              Object {
                "custom": Object {
                  "title": "subGroup1Question2Choice1",
                },
                "disabled": false,
                "id": "subGroup1Question2Choice1",
                "value": "subGroup1Question2Choice1",
              },
              Object {
                "custom": Object {
                  "title": "subGroup1Question2Choice2",
                },
                "disabled": false,
                "id": "subGroup1Question2Choice2",
                "value": "subGroup1Question2Choice2",
              },
              Object {
                "custom": Object {
                  "title": "subGroup1Question2Choice3",
                },
                "disabled": false,
                "id": "subGroup1Question2Choice3",
                "value": "subGroup1Question2Choice3",
              },
            ],
            "currentAnswer": undefined,
            "custom": Object {
              "title": "subGroup1Question2",
            },
            "disabled": false,
            "error": "Please select an option.",
            "id": "subGroup1Question2",
            "type": "choice",
            "validatedAnswer": undefined,
            "validating": false,
          },
          Object {
            "choices": Array [
              Object {
                "custom": Object {
                  "title": "subGroup1Question3Choice1",
                },
                "disabled": true,
                "id": "subGroup1Question3Choice1",
                "value": "subGroup1Question3Choice1",
              },
              Object {
                "custom": Object {
                  "title": "subGroup1Question3Choice2",
                },
                "disabled": true,
                "id": "subGroup1Question3Choice2",
                "value": "subGroup1Question3Choice2",
              },
              Object {
                "custom": Object {
                  "title": "subGroup1Question3Choice3",
                },
                "disabled": true,
                "id": "subGroup1Question3Choice3",
                "value": "subGroup1Question3Choice3",
              },
            ],
            "currentAnswer": Array [],
            "custom": Object {
              "title": "subGroup1Question3",
            },
            "disabled": true,
            "error": "Please select at least 1 option.",
            "id": "subGroup1Question3",
            "type": "choices",
            "validatedAnswer": undefined,
            "validating": false,
          },
          Object {
            "choices": Array [
              Object {
                "custom": Object {
                  "title": "subGroup1Question4Choice1",
                },
                "disabled": false,
                "id": "subGroup1Question4Choice1",
                "value": "subGroup1Question4Choice1",
              },
              Object {
                "custom": Object {
                  "title": "subGroup1Question4Choice2",
                },
                "disabled": false,
                "id": "subGroup1Question4Choice2",
                "value": "subGroup1Question4Choice2",
              },
              Object {
                "custom": Object {
                  "title": "subGroup1Question4Choice3",
                },
                "disabled": false,
                "id": "subGroup1Question4Choice3",
                "value": "subGroup1Question4Choice3",
              },
            ],
            "currentAnswer": Array [],
            "custom": Object {
              "title": "subGroup1Question3",
            },
            "disabled": false,
            "error": "Please select at least 1 option.",
            "id": "subGroup1Question4",
            "type": "choices",
            "validatedAnswer": undefined,
            "validating": false,
          },
        ],
      },
    ],
    "id": "group1",
    "questions": Array [
      Object {
        "choices": Array [],
        "currentAnswer": undefined,
        "custom": Object {
          "title": "group1Questions",
        },
        "disabled": false,
        "error": "This field is required.",
        "id": "group1Question1",
        "type": "any",
        "validatedAnswer": undefined,
        "validating": false,
      },
      Object {
        "choices": Array [
          Object {
            "custom": Object {
              "title": "group1Question2Choice1",
            },
            "disabled": false,
            "id": "group1Question2Choice1",
            "value": "group1Question2Choice1",
          },
          Object {
            "custom": Object {
              "title": "group1Question2Choice2",
            },
            "disabled": false,
            "id": "group1Question2Choice2",
            "value": "group1Question2Choice2",
          },
          Object {
            "custom": Object {
              "title": "group1Question2Choice3",
            },
            "disabled": false,
            "id": "group1Question2Choice3",
            "value": "group1Question2Choice3",
          },
        ],
        "currentAnswer": undefined,
        "custom": Object {
          "title": "group1Question2",
        },
        "disabled": false,
        "error": "Please select an option.",
        "id": "group1Question2",
        "type": "choice",
        "validatedAnswer": undefined,
        "validating": false,
      },
      Object {
        "choices": Array [
          Object {
            "custom": Object {
              "title": "group1Question3Choice1",
            },
            "disabled": false,
            "id": "group1Question3Choice1",
            "value": "group1Question3Choice1",
          },
          Object {
            "custom": Object {
              "title": "group1Question3Choice2",
            },
            "disabled": false,
            "id": "group1Question3Choice2",
            "value": "group1Question3Choice2",
          },
          Object {
            "custom": Object {
              "title": "group1Question3Choice3",
            },
            "disabled": false,
            "id": "group1Question3Choice3",
            "value": "group1Question3Choice3",
          },
        ],
        "currentAnswer": Array [],
        "custom": Object {
          "title": "group1Question3",
        },
        "disabled": false,
        "error": undefined,
        "id": "group1Question3",
        "type": "choices",
        "validatedAnswer": Array [],
        "validating": false,
      },
    ],
  },
]
`;

exports[`Basic No Default Answers getValidatedAnswers 1`] = `
Object {
  "group1Question3": Array [],
}
`;

exports[`Basic With Default Answers getConfigs 1`] = `
Array [
  Object {
    "custom": undefined,
    "defaultDisabled": false,
    "groups": Array [
      Object {
        "custom": undefined,
        "defaultDisabled": false,
        "groups": Array [],
        "id": "subGroup1",
        "questions": Array [
          Object {
            "choices": Array [],
            "custom": Object {
              "title": "subGroup1Questions",
            },
            "defaultAnswer": "subGroup1Question1Answer",
            "defaultDisabled": false,
            "id": "subGroup1Question1",
            "type": "any",
            "validators": Array [
              "notNull",
            ],
          },
          Object {
            "choices": Array [
              Object {
                "custom": Object {
                  "title": "subGroup1Question2Choice1",
                },
                "defaultDisabled": false,
                "id": "subGroup1Question2Choice1",
                "onSelected": Object {
                  "enable": Array [
                    "subGroup1Question3",
                  ],
                },
                "value": "subGroup1Question2Choice1",
              },
              Object {
                "custom": Object {
                  "title": "subGroup1Question2Choice2",
                },
                "defaultDisabled": false,
                "id": "subGroup1Question2Choice2",
                "onSelected": Object {
                  "disable": Array [
                    "subGroup1Question4",
                  ],
                },
                "value": "subGroup1Question2Choice2",
              },
              Object {
                "custom": Object {
                  "title": "subGroup1Question2Choice3",
                },
                "defaultDisabled": false,
                "id": "subGroup1Question2Choice3",
                "onSelected": Object {},
                "value": "subGroup1Question2Choice3",
              },
            ],
            "custom": Object {
              "title": "subGroup1Question2",
            },
            "defaultAnswer": "subGroup1Question2Choice1",
            "defaultDisabled": false,
            "id": "subGroup1Question2",
            "type": "choice",
            "validators": Array [
              "notNullSingle",
            ],
          },
          Object {
            "choices": Array [
              Object {
                "custom": Object {
                  "title": "subGroup1Question3Choice1",
                },
                "defaultDisabled": false,
                "id": "subGroup1Question3Choice1",
                "onSelected": Object {},
                "value": "subGroup1Question3Choice1",
              },
              Object {
                "custom": Object {
                  "title": "subGroup1Question3Choice2",
                },
                "defaultDisabled": false,
                "id": "subGroup1Question3Choice2",
                "onSelected": Object {},
                "value": "subGroup1Question3Choice2",
              },
              Object {
                "custom": Object {
                  "title": "subGroup1Question3Choice3",
                },
                "defaultDisabled": false,
                "id": "subGroup1Question3Choice3",
                "onSelected": Object {},
                "value": "subGroup1Question3Choice3",
              },
            ],
            "custom": Object {
              "title": "subGroup1Question3",
            },
            "defaultAnswer": Array [
              "subGroup1Question3Choice1",
              "subGroup1Question3Choice2",
            ],
            "defaultDisabled": true,
            "id": "subGroup1Question3",
            "type": "choices",
            "validators": Array [
              "atLeast1",
            ],
          },
          Object {
            "choices": Array [
              Object {
                "custom": Object {
                  "title": "subGroup1Question4Choice1",
                },
                "defaultDisabled": false,
                "id": "subGroup1Question4Choice1",
                "onSelected": Object {},
                "value": "subGroup1Question4Choice1",
              },
              Object {
                "custom": Object {
                  "title": "subGroup1Question4Choice2",
                },
                "defaultDisabled": false,
                "id": "subGroup1Question4Choice2",
                "onSelected": Object {},
                "value": "subGroup1Question4Choice2",
              },
              Object {
                "custom": Object {
                  "title": "subGroup1Question4Choice3",
                },
                "defaultDisabled": false,
                "id": "subGroup1Question4Choice3",
                "onSelected": Object {},
                "value": "subGroup1Question4Choice3",
              },
            ],
            "custom": Object {
              "title": "subGroup1Question3",
            },
            "defaultAnswer": Array [
              "subGroup1Question4Choice1",
              "subGroup1Question4Choice2",
            ],
            "defaultDisabled": false,
            "id": "subGroup1Question4",
            "type": "choices",
            "validators": Array [
              "atLeast1",
            ],
          },
        ],
      },
    ],
    "id": "group1",
    "questions": Array [
      Object {
        "choices": Array [],
        "custom": Object {
          "title": "group1Questions",
        },
        "defaultAnswer": "group1Question1Answer",
        "defaultDisabled": false,
        "id": "group1Question1",
        "type": "any",
        "validators": Array [
          "notNull",
        ],
      },
      Object {
        "choices": Array [
          Object {
            "custom": Object {
              "title": "group1Question2Choice1",
            },
            "defaultDisabled": false,
            "id": "group1Question2Choice1",
            "onSelected": Object {},
            "value": "group1Question2Choice1",
          },
          Object {
            "custom": Object {
              "title": "group1Question2Choice2",
            },
            "defaultDisabled": false,
            "id": "group1Question2Choice2",
            "onSelected": Object {},
            "value": "group1Question2Choice2",
          },
          Object {
            "custom": Object {
              "title": "group1Question2Choice3",
            },
            "defaultDisabled": false,
            "id": "group1Question2Choice3",
            "onSelected": Object {},
            "value": "group1Question2Choice3",
          },
        ],
        "custom": Object {
          "title": "group1Question2",
        },
        "defaultAnswer": "group1Question2Choice1",
        "defaultDisabled": false,
        "id": "group1Question2",
        "type": "choice",
        "validators": Array [
          "notNullSingle",
        ],
      },
      Object {
        "choices": Array [
          Object {
            "custom": Object {
              "title": "group1Question3Choice1",
            },
            "defaultDisabled": false,
            "id": "group1Question3Choice1",
            "onSelected": Object {},
            "value": "group1Question3Choice1",
          },
          Object {
            "custom": Object {
              "title": "group1Question3Choice2",
            },
            "defaultDisabled": false,
            "id": "group1Question3Choice2",
            "onSelected": Object {},
            "value": "group1Question3Choice2",
          },
          Object {
            "custom": Object {
              "title": "group1Question3Choice3",
            },
            "defaultDisabled": false,
            "id": "group1Question3Choice3",
            "onSelected": Object {},
            "value": "group1Question3Choice3",
          },
        ],
        "custom": Object {
          "title": "group1Question3",
        },
        "defaultAnswer": Array [
          "group1Question3Choice1",
          "group1Question3Choice2",
        ],
        "defaultDisabled": false,
        "id": "group1Question3",
        "type": "choices",
        "validators": Array [],
      },
    ],
  },
]
`;

exports[`Basic With Default Answers getCurrentAnswers 1`] = `
Object {
  "group1Question1": "group1Question1Answer",
  "group1Question2": "group1Question2Choice1",
  "group1Question3": Array [
    "group1Question3Choice1",
    "group1Question3Choice2",
  ],
  "subGroup1Question1": "subGroup1Question1Answer",
  "subGroup1Question2": "subGroup1Question2Choice1",
  "subGroup1Question3": Array [
    "subGroup1Question3Choice1",
    "subGroup1Question3Choice2",
  ],
  "subGroup1Question4": Array [
    "subGroup1Question4Choice1",
    "subGroup1Question4Choice2",
  ],
}
`;

exports[`Basic With Default Answers getErrors 1`] = `Object {}`;

exports[`Basic With Default Answers getRenderInstructions 1`] = `
Array [
  Object {
    "custom": undefined,
    "disabled": false,
    "groups": Array [
      Object {
        "custom": undefined,
        "disabled": false,
        "groups": Array [],
        "id": "subGroup1",
        "questions": Array [
          Object {
            "choices": Array [],
            "currentAnswer": "subGroup1Question1Answer",
            "custom": Object {
              "title": "subGroup1Questions",
            },
            "disabled": false,
            "error": undefined,
            "id": "subGroup1Question1",
            "type": "any",
            "validatedAnswer": "subGroup1Question1Answer",
            "validating": false,
          },
          Object {
            "choices": Array [
              Object {
                "custom": Object {
                  "title": "subGroup1Question2Choice1",
                },
                "disabled": false,
                "id": "subGroup1Question2Choice1",
                "value": "subGroup1Question2Choice1",
              },
              Object {
                "custom": Object {
                  "title": "subGroup1Question2Choice2",
                },
                "disabled": false,
                "id": "subGroup1Question2Choice2",
                "value": "subGroup1Question2Choice2",
              },
              Object {
                "custom": Object {
                  "title": "subGroup1Question2Choice3",
                },
                "disabled": false,
                "id": "subGroup1Question2Choice3",
                "value": "subGroup1Question2Choice3",
              },
            ],
            "currentAnswer": "subGroup1Question2Choice1",
            "custom": Object {
              "title": "subGroup1Question2",
            },
            "disabled": false,
            "error": undefined,
            "id": "subGroup1Question2",
            "type": "choice",
            "validatedAnswer": "subGroup1Question2Choice1",
            "validating": false,
          },
          Object {
            "choices": Array [
              Object {
                "custom": Object {
                  "title": "subGroup1Question3Choice1",
                },
                "disabled": false,
                "id": "subGroup1Question3Choice1",
                "value": "subGroup1Question3Choice1",
              },
              Object {
                "custom": Object {
                  "title": "subGroup1Question3Choice2",
                },
                "disabled": false,
                "id": "subGroup1Question3Choice2",
                "value": "subGroup1Question3Choice2",
              },
              Object {
                "custom": Object {
                  "title": "subGroup1Question3Choice3",
                },
                "disabled": false,
                "id": "subGroup1Question3Choice3",
                "value": "subGroup1Question3Choice3",
              },
            ],
            "currentAnswer": Array [
              "subGroup1Question3Choice1",
              "subGroup1Question3Choice2",
            ],
            "custom": Object {
              "title": "subGroup1Question3",
            },
            "disabled": false,
            "error": undefined,
            "id": "subGroup1Question3",
            "type": "choices",
            "validatedAnswer": Array [
              "subGroup1Question3Choice1",
              "subGroup1Question3Choice2",
            ],
            "validating": false,
          },
          Object {
            "choices": Array [
              Object {
                "custom": Object {
                  "title": "subGroup1Question4Choice1",
                },
                "disabled": false,
                "id": "subGroup1Question4Choice1",
                "value": "subGroup1Question4Choice1",
              },
              Object {
                "custom": Object {
                  "title": "subGroup1Question4Choice2",
                },
                "disabled": false,
                "id": "subGroup1Question4Choice2",
                "value": "subGroup1Question4Choice2",
              },
              Object {
                "custom": Object {
                  "title": "subGroup1Question4Choice3",
                },
                "disabled": false,
                "id": "subGroup1Question4Choice3",
                "value": "subGroup1Question4Choice3",
              },
            ],
            "currentAnswer": Array [
              "subGroup1Question4Choice1",
              "subGroup1Question4Choice2",
            ],
            "custom": Object {
              "title": "subGroup1Question3",
            },
            "disabled": false,
            "error": undefined,
            "id": "subGroup1Question4",
            "type": "choices",
            "validatedAnswer": Array [
              "subGroup1Question4Choice1",
              "subGroup1Question4Choice2",
            ],
            "validating": false,
          },
        ],
      },
    ],
    "id": "group1",
    "questions": Array [
      Object {
        "choices": Array [],
        "currentAnswer": "group1Question1Answer",
        "custom": Object {
          "title": "group1Questions",
        },
        "disabled": false,
        "error": undefined,
        "id": "group1Question1",
        "type": "any",
        "validatedAnswer": "group1Question1Answer",
        "validating": false,
      },
      Object {
        "choices": Array [
          Object {
            "custom": Object {
              "title": "group1Question2Choice1",
            },
            "disabled": false,
            "id": "group1Question2Choice1",
            "value": "group1Question2Choice1",
          },
          Object {
            "custom": Object {
              "title": "group1Question2Choice2",
            },
            "disabled": false,
            "id": "group1Question2Choice2",
            "value": "group1Question2Choice2",
          },
          Object {
            "custom": Object {
              "title": "group1Question2Choice3",
            },
            "disabled": false,
            "id": "group1Question2Choice3",
            "value": "group1Question2Choice3",
          },
        ],
        "currentAnswer": "group1Question2Choice1",
        "custom": Object {
          "title": "group1Question2",
        },
        "disabled": false,
        "error": undefined,
        "id": "group1Question2",
        "type": "choice",
        "validatedAnswer": "group1Question2Choice1",
        "validating": false,
      },
      Object {
        "choices": Array [
          Object {
            "custom": Object {
              "title": "group1Question3Choice1",
            },
            "disabled": false,
            "id": "group1Question3Choice1",
            "value": "group1Question3Choice1",
          },
          Object {
            "custom": Object {
              "title": "group1Question3Choice2",
            },
            "disabled": false,
            "id": "group1Question3Choice2",
            "value": "group1Question3Choice2",
          },
          Object {
            "custom": Object {
              "title": "group1Question3Choice3",
            },
            "disabled": false,
            "id": "group1Question3Choice3",
            "value": "group1Question3Choice3",
          },
        ],
        "currentAnswer": Array [
          "group1Question3Choice1",
          "group1Question3Choice2",
        ],
        "custom": Object {
          "title": "group1Question3",
        },
        "disabled": false,
        "error": undefined,
        "id": "group1Question3",
        "type": "choices",
        "validatedAnswer": Array [
          "group1Question3Choice1",
          "group1Question3Choice2",
        ],
        "validating": false,
      },
    ],
  },
]
`;

exports[`Basic With Default Answers getValidatedAnswers 1`] = `
Object {
  "group1Question1": "group1Question1Answer",
  "group1Question2": "group1Question2Choice1",
  "group1Question3": Array [
    "group1Question3Choice1",
    "group1Question3Choice2",
  ],
  "subGroup1Question1": "subGroup1Question1Answer",
  "subGroup1Question2": "subGroup1Question2Choice1",
  "subGroup1Question3": Array [
    "subGroup1Question3Choice1",
    "subGroup1Question3Choice2",
  ],
  "subGroup1Question4": Array [
    "subGroup1Question4Choice1",
    "subGroup1Question4Choice2",
  ],
}
`;
